fix: fix eps list table content overflows

--- a/src/public/css/podcast/podcast_detail.css
+++ b/src/public/css/podcast/podcast_detail.css
@@ -33,9 +33,7 @@
 
   .podcast-detail-eps-container {
     background-color: var(--clr-background-base-one);
-    border-radius: 15px;
-    padding: 10px 20px;
-    width: 90%;
+    width: 100%;
     transition: all 0.5s ease;
 
     > h2 {
